# howdy

./: .gitattributes  .gitignore  .readthedocs.yml  LICENSE  Makefile  README.rst  __init__.py  createTexts.py  get_mov_subtitle.py  get_mov_tor.py  get_plextvdb_batch.py  get_tv_tor.py  plex_change_password.py  plex_config_gui.py  plex_core_GUI.py  plex_core_cli.py  plex_core_gui.py  plex_create_texts.py  plex_deluge_console.py  plex_email_gui.py  plex_email_notif.py  plex_music_album.py  plex_music_metafill.py  plex_music_songs.py  plex_resynclibs.py  plex_store_credentials.py  plex_tmdb_gui.py  plex_tmdb_mygui.py  plex_tmdb_totgui.py  plex_tvdb_epinfo.py  plex_tvdb_epname.py  plex_tvdb_futureshows.py  plex_tvdb_gui.py  plex_tvdb_plots.py  pyproject.toml  requirements.txt  rsync_subproc.py  setup.py  upload_to_gmusic.py
docs/: .buildinfo  Makefile  genindex.html  howdy_api.html  howdy_prereqs.html  index.html  index_bak.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: genindex.rst.txt  index.rst.txt
docs/_static/: documentation_options.js  howdy_create_texts.rst
docs/attic/: plex_tmdb_totgui_help.tex
docs/howdy-config/: howdy_config.html  howdy_config_gui_usage.html  howdy_services_config.html  howdy_settings_config.html
docs/howdy-core/: howdy_core.html  howdy_core_api.html
docs/howdy-email/: howdy_email.html  howdy_email_api.html  howdy_email_gui.html
docs/howdy-movie/: get_mov_tor.html  howdy_movie.html  howdy_movie_api.html  howdy_movie_totgui.html
docs/howdy-music/: howdy_music.html  howdy_music_api.html
docs/howdy-tv/: howdy_tv.html  howdy_tv_api.html  howdy_tv_gui.html
docs/not-sphinx/: plex_config.rst  plex_services_config.rst
docs/plex-config/: plex_services_config.rst  plex_settings_config.rst
docs/source/: conf.py  create_exec_covg.py  howdy_prereqs.rst  index.rst  plex_api.rst  plex_prereqs.rst
docsrc/: Makefile
docsrc/source/: conf.py  howdy_api.rst  howdy_prereqs.rst
howdy/: __init__.py  initialization.py
howdy/attic/: get_mov_subtitle.py  howdy_movie_subtitles.py  subscene.py
howdy/core/: __init__.py  core.py  core_admin.py  core_attic.py  core_deluge.py  core_ffmpeg.py  core_gui.py  core_rsync.py  core_texts_gui.py  core_torrents.py  core_transmission.py
howdy/email/: __init__.py  email.py  email_attic.py  email_basegui.py  email_demo_gui.py  email_gui.py  email_mygui.py
howdy/movie/: __init__.py  movie.py  movie_gui.py  movie_mygui.py  movie_torrents.py  movie_totgui.py
howdy/music/: __init__.py  music.py  music_spotify.py  pygn.py
howdy/plexattic/: howdy_movie_subtitles.py  subscene.py
howdy/resources/: client_secrets.json  email_notif_template.rst  howdy_body_template.rst  howdy_sendmovie_magnet.rst  howdy_sendmovie_none.rst  howdy_sendmovie_torrent.rst  howdy_sendmovie_torrent_template.rst  howdy_template.rst  plex_tmdb_totgui_help.html  plextmdb_sendmovie_none.tex  summary_data_movie_template.rst  summary_data_music_template.rst  summary_data_tv_template.rst
howdy/tv/: __init__.py  tv.py  tv_attic.py  tv_gui.py  tv_season_gui.py  tv_torrents.py
plexattic/: subscene.py
plexcore/: __init__.py  plexcore.py  plexcore_attic.py  plexcore_deluge.py  plexcore_gui.py  plexcore_rsync.py  plexcore_subtitles.py  plexcore_texts_gui.py  plexinitialization.py  subscene.py
plexemail/: __init__.py  plexemail.py  plexemail_attic.py  plexemail_basegui.py  plexemail_gui.py  plexemail_mygui.py
plexmusic/: __init__.py  plexmusic.py  plexmusic_ydl.py  pygn.py
plexstuff/: __init__.py  plexinitialization.py
plexstuff/email/: __init__.py  email.py  email_attic.py  email_basegui.py  email_gui.py  email_mygui.py
plexstuff/music/: __init__.py  music.py  pygn.py
plexstuff/plexattic/: get_mov_subtitle.py  plextmdb_subtitles.py  subscene.py
plextmdb/: __init__.py  plextmdb.py  plextmdb_gui.py  plextmdb_mygui.py  plextmdb_subtitles.py  plextmdb_torrents.py  plextmdb_totgui.py
plextvdb/: __init__.py  plextvdb.py  plextvdb_attic.py  plextvdb_gui.py  plextvdb_other.py  plextvdb_season_gui.py  plextvdb_torrents.py
remotes_standalones/: mov_tor_remotes.py  plex_change_password.py  plex_music_remote.py  tv_tor_remotes.py
resources/: amoled.qss  app.db  aqua.qss  client_secrets.json  credentials_gspread.json  plexstuff_body_template.tex  plexstuff_template.tex  plextmdb_sendmovie_magnet.tex  plextmdb_sendmovie_none.tex  plextmdb_sendmovie_torrent.tex  requirements.json  requirements.txt
tests/: Big_Hero_6.0.json  Big_Hero_6.json  East_Side_Sushi.2.json  Star_Trek_VI.json  The_Witch.1.json  __init__.py  conftest.py  plex_tmdb_mygui.py  test_imgurOauth2Dialog.py  test_picaw.py  test_plex_config_gui.py  test_plexcore.py  test_plexemail_basegui.py  test_plexinitialization.py  test_qstackedwidget.py  test_tmdb.py  test_tmdb_gui.py  test_tmdb_mygui.py  test_tmdb_torrents.py  test_tmdb_totgui.py  test_tmdbgui.py  test_tvdb_gui.py  test_tvdbgui.py  test_tvdbseason_gui.py  test_tvdbshow_gui.py  toGet.json
(+209 files in other folders)
